cfn_benchmark/cfn_templates/RLOpenCatalyst__rgdeploy/cft-templates/fsx-for-lustre.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: Sets up an FSX for Lustre filesystem with PERSISTENT_1 deployment type using SSD storage.

Parameters:
  StorageCapacity:
    Description: >-
      The storage capacity of the file system that you're creating.
      The valid values are 1200 GiB, 2400 GiB, and increments of 2400 GiB.
    Default: 1200
    Type: Number
  ImportPath:
    Description: The path to the Amazon S3 bucket (including the optional prefix) that you're using as the data repository for your Amazon FSx for Lustre file system
    Default: NONE
    Type: String
    AllowedPattern: ^[^\u0000\u0085\u2028\u2029\r\n]{3,4357}$
  ExportPath:
    Description: The path in the Amazon S3 bucket where the root of your Amazon FSx file system is exported.
    Default: NONE
    Type: String
    AllowedPattern: ^[^\u0000\u0085\u2028\u2029\r\n]{3,4357}$
  VpcId:
    Description: The ID of the VPC that the file system will be accessible from
    Type: AWS::EC2::VPC::Id
  SubnetId:
    Description: The ID of the subnet that the file system will be accessible from. Make sure the subnet is part of the VPC selected above.
    Type: AWS::EC2::Subnet::Id
  KmsKeyId:
    Description: The ID of the AWS Key Management Service (AWS KMS) key used to encrypt Amazon FSx file system data.
    Default: NONE
    Type: String
  AutoImportPolicy:
    Description: Choose how Amazon FSx keeps your file and directory listings up to date as you add or modify objects in your linked S3 bucket
    Type: String
    Default: NONE
    AllowedValues: [NONE, NEW, NEW_CHANGED, NEW_CHANGED_DELETED]
  DataCompressionType:
    Description: Sets the data compression configuration for the file system.
    Type: String
    Default: NONE
    AllowedValues: [NONE, LZ4]
  PerUnitStorageThroughput:
    Description: The amount of read and write throughput for each 1 tebibyte (TiB) of file system storage capacity.
    Type: Number
    Default: 50
    AllowedValues: [50, 100, 200]
  ResearcherName:
    Type: String
    Description: Researcher name that will be added as tag to the resources
  ProjectId:
    Type: String
    Description: Project Id that will be added as tag to the resources
  Namespace:
    Type: String
    Description: An environment name that will be prefixed to resource names

Conditions:
  KMSKeyNotProvided: !Equals [!Ref KmsKeyId, 'NONE']
  ImportPathNotProvided: !Equals [!Ref ImportPath, 'NONE']
  ExportPathNotProvided: !Equals [!Ref ExportPath, 'NONE']

Resources:
  FSXSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 988
          ToPort: 988
          IpProtocol: tcp
        - CidrIp: "0.0.0.0/0"
          FromPort: 1021
          ToPort: 1023
          IpProtocol: tcp
      GroupDescription: FSX Security Group

  FileSystem:
    Type: AWS::FSx::FileSystem
    Properties:
      FileSystemType: LUSTRE
      FileSystemTypeVersion: 2.12
      KmsKeyId: !If [KMSKeyNotProvided, !Ref 'AWS::NoValue', !Ref KmsKeyId]
      LustreConfiguration:
        AutoImportPolicy: !If [ImportPathNotProvided, !Ref 'AWS::NoValue', !Ref AutoImportPolicy]
        CopyTagsToBackups: True
        DataCompressionType: !Ref DataCompressionType
        DeploymentType: PERSISTENT_1
        ImportPath: !If [ImportPathNotProvided, !Ref 'AWS::NoValue', !Ref ImportPath]
        ExportPath: !If [ExportPathNotProvided, !Ref 'AWS::NoValue', !Ref ExportPath]
        PerUnitStorageThroughput: !Ref PerUnitStorageThroughput
      SecurityGroupIds: [!GetAtt FSXSecurityGroup.GroupId]
      StorageCapacity: !Ref StorageCapacity
      StorageType: SSD
      SubnetIds:
        - !Ref SubnetId
      Tags:
        - Key: cost_resource
          Value: !Sub ${AWS::StackName}
        - Key: researcher_name
          Value: !Ref ResearcherName
        - Key: project_name
          Value: !Ref ProjectId
        - Key: Name
          Value: !Join ['-', [Ref: Namespace, 'file-system']]

Outputs:
  FileSystemId:
    Value: !Ref FileSystem
